Git Tests/force-app/main/default/default/objects/Caso_Item_da_Nota_Fiscal__c/Caso_Item_da_Nota_Fiscal__c.object-meta.xml
<CustomObject>
    <label>Caso - Item da Nota Fiscal</label>
    <nameField>
        <displayFormat>CIN-{000000}</displayFormat>
        <label>Caso - Itens de Nota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caso - Itens da Nota Fiscal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>