Git Tests/force-app/main/default/default/objects/Caso_Item_da_Nota_Fiscal__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Caso - Itens da Nota Fiscal</relationshipLabel>
    <relationshipName>Caso_Itens_da_Nota_Fiscal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>