Git Tests/force-app/main/default/default/objects/Caso_Item_da_Nota_Fiscal__c/fields/Id_Nota_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Id_Nota_Fiscal__c</fullName>
    <formula>Caso__r.NotaFiscal__c</formula>
    <label>Id Nota Fiscal</label>
    <type>Text</type>
</CustomField>