Git Tests/force-app/main/default/default/objects/Caso_Item_da_Nota_Fiscal__c/fields/Informacao_do_Lote__c.field-meta.xml
<CustomField>
    <fullName>Informacao_do_Lote__c</fullName>
    <label>Informação do Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>