Git Tests/force-app/main/default/default/objects/Caso_Item_da_Nota_Fiscal__c/fields/Item_da_nota_fiscal__c.field-meta.xml
<CustomField>
    <fullName>Item_da_nota_fiscal__c</fullName>
    <label>Item da nota fiscal</label>
    <referenceTo>ItensNotaFiscal__c</referenceTo>
    <relationshipLabel>Caso - Itens da Nota Fiscal</relationshipLabel>
    <relationshipName>Caso_Itens_da_Nota_Fiscal</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>