Git Tests/force-app/main/default/default/objects/Caso_Item_da_Nota_Fiscal__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Item_da_nota_fiscal__r.Produto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produto</label>
    <type>Text</type>
</CustomField>