Git Tests/force-app/main/default/default/objects/Caso_Item_da_Nota_Fiscal__c/fields/Quantidade_Original__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Original__c</fullName>
    <formula>Item_da_nota_fiscal__r.Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>